fix: Submission Comment Linewrap

--- a/src/modals/Submission.scss
+++ b/src/modals/Submission.scss
@@ -308,6 +308,7 @@
          > span {
             font-size: 1rem;
             color: rgba(var(--text-color-rgb), 1);
+            white-space: wrap;
          }
       }
    }
